[package]
name = "data_prep"
version = "0.1.0"
authors = ["bvanroll <beppe.vanrolleghem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
